--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>CucumberJavaProject</groupId>
-	<artifactId>CucumberJavaProject</artifactId>
+	<groupId>Team18_LMSProject</groupId>
+	<artifactId>Team18_LMSProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
-	<name>CucumberJavaProject</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
 
 	<build>
 	  <plugins>
