Dashboard and logout functionality

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -8,3 +8,4 @@ newProgramBtn = A New Program
 excelfilepath=./src/test/resources/Exceldata/ExcelData.xlsx
 username =a
 password =a
+dashBoard_url=https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com/
