--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,7 +2,7 @@ browser =chrome
 url= https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com/
 wrongurl= https://lms-frontendddd-api-hackathon-apr-326235f3973d.herokuapp.com/
 homePageTitle =LMS
-dashboardHeader Manage Program
+dashboardHeader=Manage Program
 newProgramBtn = A New Program
 #Excel Path
 excelfilepath=./src/test/resources/Exceldata/ExcelData.xlsx
