--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -3,6 +3,7 @@ url= https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com/
 homePageTitle =LMS
 dashboardHeader Manage Program
 newProgramBtn = A New Program
+batchUrl = https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com/batch
 #Excel Path
 excelfilepath=./src/test/resources/Exceldata/ExcelData.xlsx
 
